--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "i": "^0.3.7"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "i": "^0.3.7",
+    "mongoose": "^8.5.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
